<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_8">

    <TextView
        android:id="@+id/textSongNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/text_item_song"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textArtistNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/text_artist"
        app:layout_constraintEnd_toEndOf="@+id/textSongNotification"
        app:layout_constraintStart_toStartOf="@+id/textSongNotification"
        app:layout_constraintTop_toBottomOf="@+id/textSongNotification" />

    <ImageButton
        android:id="@+id/buttonPrevNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_12"
        android:contentDescription="@string/text_button_previous"
        app:layout_constraintEnd_toStartOf="@+id/buttonPauseNotification"
        app:layout_constraintStart_toStartOf="@+id/textArtistNotification"
        app:layout_constraintTop_toBottomOf="@+id/textArtistNotification"
        android:src="@drawable/ic_prev" />

    <ImageButton
        android:id="@+id/buttonPauseNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_16"
        android:contentDescription="@string/text_button_pause"
        app:layout_constraintStart_toEndOf="@+id/buttonPrevNotification"
        app:layout_constraintTop_toBottomOf="@+id/textArtistNotification"
        android:src="@drawable/ic_pause" />

    <ImageButton
        android:id="@+id/buttonSkipNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_16"
        android:contentDescription="@string/text_button_skip"
        app:layout_constraintStart_toEndOf="@+id/buttonPauseNotification"
        app:layout_constraintTop_toBottomOf="@+id/textArtistNotification"
        android:src="@drawable/ic_skip" />

    <ImageButton
        android:id="@+id/buttonCloseNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_16"
        android:contentDescription="@string/text_button_close"
        app:layout_constraintStart_toEndOf="@+id/buttonSkipNotification"
        app:layout_constraintTop_toBottomOf="@+id/textArtistNotification"
        android:src="@drawable/ic_close" />
</androidx.constraintlayout.widget.ConstraintLayout>